--- a/ecommerce-angular/shop/src/app/components/checkout/stripe/stripe.component.html
+++ b/ecommerce-angular/shop/src/app/components/checkout/stripe/stripe.component.html
@@ -3,17 +3,17 @@
     <div class="checkout-card">
       <form action="" [formGroup]="form" (submit)="initPay()">
         <div class="input">
-          <label class="label">Card Number</label>
+          <!-- <label class="label">Card Number</label> -->
           <div id="card"></div>
         </div>
-        <hr>
+        <hr />
         <div class="input">
-          <label class="label">CVC</label>
+          <!-- <label class="label">CVC</label> -->
           <div id="cvc"></div>
         </div>
-        <hr>
+        <hr />
         <div class="input">
-          <label class="label">EXP</label>
+          <!-- <label class="label">EXP</label> -->
           <div id="exp"></div>
         </div>
         <button class="button" type="submit">Pay</button>
